// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.frontend.v1;


// State of a solution.
enum SolutionState {
  SOLUTION_STATE_UNSPECIFIED = 0;
  SOLUTION_STATE_NOT_RUNNING = 1;
  SOLUTION_STATE_RUNNING_ON_HW = 2;
  SOLUTION_STATE_RUNNING_IN_SIM = 3;
}

// Details about a cluster.
message ClusterDescription {
  // The unique name/ID of the cluster within its project.
  string cluster_name = 1;

  // K8s context of the cluster. Usually the same as 'cluster_name'.
  string k8s_context = 2;

  // The region the cluster is located in. Can be used, e.g., for grouping
  // clusters for display purposes.
  string region = 3;

  // True if cluster is powerful enough to run a simulated workcell.
  bool can_do_sim = 4;

  // True if cluster can access real hardware.
  bool can_do_real = 5;

  // True if cluster has a GPU.
  bool has_gpu = 6;

  // Name/ID of the currently running solution. Empty if no solution is running.
  string solution_name = 7;

  // Display name of the currently running solution. Empty if no solution is
  // running.
  string solution_display_name = 8;

  // State of the running solution. If a solution is currently running, equal to
  // one of the running states (e.g., SOLUTION_STATE_RUNNING_IN_SIM). Equal to
  // SOLUTION_STATE_UNSPECIFIED if no solution is running.
  SolutionState solution_state = 9;
}

message ListClusterDescriptionsRequest {
  // Room for filtering options which are currently not provided.
}

message ListClusterDescriptionsResponse {
  // Details about the clusters matching the filter criteria of the request,
  // sorted lexicographically by cluster region and 'cluster_name'.
  repeated ClusterDescription clusters = 1;
}

// Provides information about the available clusters in a project.
service ClusterDiscoveryService {

  // Returns a list of clusters registered to the org which is provided via the
  // gRPC context (as the value of an HTTP cookie with name "org-id"). If no org
  // is provided, the defaultorg will be used. In multi-tenant projects, this is
  // an empty org, and no cluster will be returned.
  rpc ListClusterDescriptions(ListClusterDescriptionsRequest)
      returns (ListClusterDescriptionsResponse) {}
}
